--- a/bin/test_mq/Makefile
+++ b/bin/test_mq/Makefile
@@ -3,6 +3,7 @@ SHELL:=bash
 opt:=ocamlfind ocamlopt -thread -package tjr_pq
 
 all:
+	$(opt) -c shared.ml
 	$(opt) -linkpkg -o sender shared.ml sender.ml 
 	$(opt) -linkpkg -o receiver shared.ml receiver.ml
 
